--- a/styles/index.css
+++ b/styles/index.css
@@ -1,31 +1,33 @@
+html{
+    font-size: 62.5%;
+}
+
 main{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     font-weight: 700;
-    font-size: 48px;
+    font-size: 4rem;
 }
 
 main div{
-    margin-top: 87px;
-    width: 371px;
-    height: 351px;
+    padding: 8rem 0rem;
+    width: 30vw;
+    height: 45vh;
 }
 
 #btn-inscrever-se{
     border: none;
     background-color: #7ED321;
-    border-radius: 15px;
-    width: 220px;
-    height: 51px;
+    border-radius: 1.5rem;
     color: #1C4701;
-    padding: 13px 55px;
+    padding: 1.2rem 4rem;
     font-weight: 700;
-    font-family: 'Open Sans', sans-serif;
     cursor: pointer;
 }
 
 main img{
-    width: 640px;
-    height: 480px;
+    width: 45vw;
+    height: 30vw;
 }
