--- a/styles/quemsomos.css
+++ b/styles/quemsomos.css
@@ -1,12 +1,37 @@
 main{
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
 }
-
+main > div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+}
+main > div > h1{
+    font-size: 3rem;
+    padding: 1rem;
+}
+main > img{
+    width: 45vw;
+}
 p{
     display: flex;
     display: column;
-    justify-content: space-around;
-    margin: 14px 200px;
+    font-size: 1.5rem;
+}
+
+@media (min-width: 768px){
+    main{
+        flex-direction: column;
+        justify-content: center;
+    }
+    main > img{
+        width: 45vw;
+    }
+    p{
+        width: 70vw;
+        padding: 2rem 8rem;
+    }
 }
