--- a/styles/blog.css
+++ b/styles/blog.css
@@ -5,6 +5,7 @@ main{
     align-items: center;
 }
 main > h1 {
+    padding: 2rem;
     font-size: 3rem;
 }
 .blog-block{
@@ -14,7 +15,11 @@ main > h1 {
     width: 80vw;
     gap: 2rem;
 }
-
+.block-content {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
 .block-content > h2{
     font-size: 3rem;
     font-weight: 700;
